; ModuleID = '/home/carl/AnghaBench/upx/src/stub/src/extr_i386-linux.elf.interp-main.c_xread.c'
source_filename = "/home/carl/AnghaBench/upx/src/stub/src/extr_i386-linux.elf.interp-main.c_xread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Extent = type { i8*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Extent*, i8*, i64)* @xread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xread(%struct.Extent* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.Extent*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store %struct.Extent* %0, %struct.Extent** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %10 = load %struct.Extent*, %struct.Extent** %4, align 8
  %11 = getelementptr inbounds %struct.Extent, %struct.Extent* %10, i32 0, i32 0
  %12 = load i8*, i8** %11, align 8
  store i8* %12, i8** %7, align 8
  %13 = load i8*, i8** %5, align 8
  store i8* %13, i8** %8, align 8
  %14 = load %struct.Extent*, %struct.Extent** %4, align 8
  %15 = getelementptr inbounds %struct.Extent, %struct.Extent* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* %6, align 8
  %18 = icmp ult i64 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %3
  %20 = call i32 @exit(i32 127) #2
  unreachable

21:                                               ; preds = %3
  %22 = load i64, i64* %6, align 8
  store i64 %22, i64* %9, align 8
  br label %23

23:                                               ; preds = %31, %21
  %24 = load i64, i64* %9, align 8
  %25 = add i64 %24, -1
  store i64 %25, i64* %9, align 8
  %26 = icmp ne i64 0, %24
  br i1 %26, label %27, label %36

27:                                               ; preds = %23
  %28 = load i8*, i8** %7, align 8
  %29 = load i8, i8* %28, align 1
  %30 = load i8*, i8** %8, align 8
  store i8 %29, i8* %30, align 1
  br label %31

31:                                               ; preds = %27
  %32 = load i8*, i8** %7, align 8
  %33 = getelementptr inbounds i8, i8* %32, i32 1
  store i8* %33, i8** %7, align 8
  %34 = load i8*, i8** %8, align 8
  %35 = getelementptr inbounds i8, i8* %34, i32 1
  store i8* %35, i8** %8, align 8
  br label %23

36:                                               ; preds = %23
  %37 = load i64, i64* %6, align 8
  %38 = load %struct.Extent*, %struct.Extent** %4, align 8
  %39 = getelementptr inbounds %struct.Extent, %struct.Extent* %38, i32 0, i32 0
  %40 = load i8*, i8** %39, align 8
  %41 = getelementptr inbounds i8, i8* %40, i64 %37
  store i8* %41, i8** %39, align 8
  %42 = load i64, i64* %6, align 8
  %43 = load %struct.Extent*, %struct.Extent** %4, align 8
  %44 = getelementptr inbounds %struct.Extent, %struct.Extent* %43, i32 0, i32 1
  %45 = load i64, i64* %44, align 8
  %46 = sub i64 %45, %42
  store i64 %46, i64* %44, align 8
  ret void
}

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
